--- a/Huimin/Data_Cleaning_Ou.ipynb
+++ b/Huimin/Data_Cleaning_Ou.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "(1460, 81)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,22 +316,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Using the drop_missing_row function\n",
+    "# Create Function---Change missing values to '0'\n",
+    "def fill_0_missing_value (dataFrame, list_of_ColumnName):\n",
+    "    dataFrame[list_of_ColumnName]=dataFrame[list_of_ColumnName].fillna(value=0)\n",
+    "    return dataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#drop rows with missing value based on column\n",
     "trainData_copy1=drop_missing_row(trainData_copy1, ['Electrical'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Fill missing values with NA\n",
-    "trainData_copy1=fill_NA_missing_value(trainData_copy1, ['LotFrontage', 'Alley', 'MasVnrType', 'MasVnrArea', 'BsmtQual',\n",
+    "trainData_copy1=fill_NA_missing_value(trainData_copy1, ['LotFrontage', 'Alley', 'MasVnrType', 'BsmtQual',\n",
     "       'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinType2', 'FireplaceQu', 'GarageType', 'GarageYrBlt',\n",
     "       'GarageFinish', 'GarageQual', 'GarageCond', 'PoolQC', 'Fence',\n",
     "       'MiscFeature'])\n"
@@ -339,7 +351,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Fill missing values with 0\n",
+    "trainData_copy1=fill_0_missing_value(trainData_copy1, ['MasVnrArea'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +370,7 @@
        "(1459, 81)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +451,7 @@
        "Length: 81, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,88 +472,282 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# One Hot Encoding"
+    "# Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Obtain List of Categorical/Oridnal Data Column Names from Excel Spread Sheet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Column Number</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Individual_dataType</th>\n",
+       "      <th>Team_dataType</th>\n",
+       "      <th>Missing Value?</th>\n",
+       "      <th>Replace Missing Value with?</th>\n",
+       "      <th>Status-Huimin</th>\n",
+       "      <th>Notes-Huimin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>MSSubClass</td>\n",
+       "      <td>categorical</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>MSZoning</td>\n",
+       "      <td>categorical</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>LotFrontage</td>\n",
+       "      <td>numerical</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>not sure</td>\n",
+       "      <td>na is not missing. It means not connected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>LotArea</td>\n",
+       "      <td>numerical</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Id                 int64\n",
-       "MSSubClass         int64\n",
-       "MSZoning          object\n",
-       "LotFrontage      float64\n",
-       "LotArea            int64\n",
-       "Street            object\n",
-       "Alley             object\n",
-       "LotShape          object\n",
-       "LandContour       object\n",
-       "Utilities         object\n",
-       "LotConfig         object\n",
-       "LandSlope         object\n",
-       "Neighborhood      object\n",
-       "Condition1        object\n",
-       "Condition2        object\n",
-       "BldgType          object\n",
-       "HouseStyle        object\n",
-       "OverallQual        int64\n",
-       "OverallCond        int64\n",
-       "YearBuilt          int64\n",
-       "YearRemodAdd       int64\n",
-       "RoofStyle         object\n",
-       "RoofMatl          object\n",
-       "Exterior1st       object\n",
-       "Exterior2nd       object\n",
-       "MasVnrType        object\n",
-       "MasVnrArea       float64\n",
-       "ExterQual         object\n",
-       "ExterCond         object\n",
-       "Foundation        object\n",
-       "                  ...   \n",
-       "BedroomAbvGr       int64\n",
-       "KitchenAbvGr       int64\n",
-       "KitchenQual       object\n",
-       "TotRmsAbvGrd       int64\n",
-       "Functional        object\n",
-       "Fireplaces         int64\n",
-       "FireplaceQu       object\n",
-       "GarageType        object\n",
-       "GarageYrBlt      float64\n",
-       "GarageFinish      object\n",
-       "GarageCars         int64\n",
-       "GarageArea         int64\n",
-       "GarageQual        object\n",
-       "GarageCond        object\n",
-       "PavedDrive        object\n",
-       "WoodDeckSF         int64\n",
-       "OpenPorchSF        int64\n",
-       "EnclosedPorch      int64\n",
-       "3SsnPorch          int64\n",
-       "ScreenPorch        int64\n",
-       "PoolArea           int64\n",
-       "PoolQC            object\n",
-       "Fence             object\n",
-       "MiscFeature       object\n",
-       "MiscVal            int64\n",
-       "MoSold             int64\n",
-       "YrSold             int64\n",
-       "SaleType          object\n",
-       "SaleCondition     object\n",
-       "SalePrice          int64\n",
-       "Length: 81, dtype: object"
+       "   Column Number         Name Individual_dataType  Team_dataType  \\\n",
+       "0              1           ID                 NaN            NaN   \n",
+       "1              2   MSSubClass         categorical            NaN   \n",
+       "2              3     MSZoning         categorical            NaN   \n",
+       "3              4  LotFrontage           numerical            NaN   \n",
+       "4              5      LotArea           numerical            NaN   \n",
+       "\n",
+       "  Missing Value?  Replace Missing Value with? Status-Huimin  \\\n",
+       "0            NaN                          NaN           NaN   \n",
+       "1            NaN                          NaN           NaN   \n",
+       "2            NaN                          NaN           NaN   \n",
+       "3            Yes                          NaN      not sure   \n",
+       "4            NaN                          NaN           NaN   \n",
+       "\n",
+       "                                Notes-Huimin  \n",
+       "0                                        NaN  \n",
+       "1                                        NaN  \n",
+       "2                                        NaN  \n",
+       "3  na is not missing. It means not connected  \n",
+       "4                                        NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trainData_copy1.dtypes"
+    "Variable_df=pd.read_excel('Variable_Analysis.xlsx')\n",
+    "Variable_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 255,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "List_colName_Categorical=Variable_df[Variable_df['Individual_dataType']=='categorical']['Name'].tolist()\n",
+    "len(List_colName_Categorical)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 256,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "List_colName_Ordinal=Variable_df[Variable_df['Individual_dataType']=='ordinal']['Name'].tolist()\n",
+    "len(List_colName_Ordinal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "List_colName_Numerical=Variable_df[Variable_df['Individual_dataType']=='numerical']['Name'].tolist()\n",
+    "len(List_colName_Ordinal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OneHotEncoder for Categorical Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def OneHotEncode_categorical_data (dataFrame, List_colName_Categorical):\n",
+    "    data=dataFrame.copy()\n",
+    "    for column_name in List_colName_Categorical:\n",
+    "        dummied_data=pd.get_dummies(data[column_name], prefix=column_name,prefix_sep='__')\n",
+    "        dummied_data=dummied_data.drop(dummied_data.columns[0], axis=1)#drop 1st column\n",
+    "        data=pd.concat([data.drop(column_name,axis=1), dummied_data ], axis=1)\n",
+    "    return data\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainData_copy1=OneHotEncode_categorical_data(trainData_copy1, List_colName_Categorical)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Id', 'LotFrontage', 'LotArea', 'OverallQual', 'OverallCond',\n",
+       "       'YearBuilt', 'YearRemodAdd', 'MasVnrArea', 'ExterQual', 'ExterCond',\n",
+       "       ...\n",
+       "       'SaleType__ConLI', 'SaleType__ConLw', 'SaleType__New', 'SaleType__Oth',\n",
+       "       'SaleType__WD', 'SaleCondition__AdjLand', 'SaleCondition__Alloca',\n",
+       "       'SaleCondition__Family', 'SaleCondition__Normal',\n",
+       "       'SaleCondition__Partial'],\n",
+       "      dtype='object', length=251)"
+      ]
+     },
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainData_copy1.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_y=trainData_copy1.SalePrice\n",
+    "train_x=trainData_copy1.drop(['SalePrice'],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ordinal Encoder for Ordinal Data"
    ]
   },
   {
@@ -539,8 +755,71 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-239-8d806b922952>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-239-8d806b922952>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
-    "#Define Functions to make datatype of columns factor"
+    "def process_ordinal_columns (dataFrame, List_colName_Ordinal):\n",
+    "    data=dataFrame.copy()\n",
+    "    for column_name in List_colName_Ordinal:\n",
+    "        if data.column_name.dtype in ['int32', 'int64']:\n",
+    "            continue\n",
+    "        elif:\n",
+    "            \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 7,  6,  8,  5,  9,  4, 10,  3,  1,  2], dtype=int64)"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainData_copy1.OverallQual.unique()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 268,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainData_copy1.OverallQual.dtype in ['int32', 'int64']"
    ]
   }
  ],
