mlflow dashboard available

--- a/Mia/train.ipynb
+++ b/Mia/train.ipynb
@@ -64,7 +64,7 @@
     "    # Split the data into training and test sets. (0.75, 0.25) split.\n",
     "    train, test = train_test_split(df_processed)\n",
     "\n",
-    "    # The predicted column is \"quality\" which is a scalar from [3, 9]\n",
+    "    # The predicted column is \"SalePrice\" .\n",
     "    train_x = train.drop([\"SalePrice\"], axis=1)\n",
     "    test_x = test.drop([\"SalePrice\"], axis=1)\n",
     "    train_y = train[[\"SalePrice\"]]\n",
@@ -150,22 +150,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elasticnet model (alpha=0.100000, l1_ratio=0.100000):\n",
-      "  RMSE: 0.15964918870941466\n",
-      "  MAE: 0.11205061540085459\n",
-      "  R2: 0.8263517131369251\n"
+      "Elasticnet model (alpha=0.100000, l1_ratio=0.200000):\n",
+      "  RMSE: 0.16316023028825413\n",
+      "  MAE: 0.11543093919572545\n",
+      "  R2: 0.818629900814024\n"
      ]
     }
    ],
    "source": [
-    "train(0.1, 0.1)"
+    "train(0.1, 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alphas = np.arange(0,20)\n",
+    "ridge.set_params(normalize=True)\n",
+    "coefs  = []\n",
+    "scores = []\n",
+    "for alpha in alphas:\n",
+    "        ridge.set_params(alpha=alpha)\n",
+    "        ridge.fit(house_features, prices)  \n",
+    "        coefs.append(ridge.coef_)\n",
+    "        scores.append(ridge.score(house_features, prices))\n",
+    "coefs = pd.DataFrame(coefs, index = alphas, columns = house_features.columns)  \n",
+    "coefs.head()"
    ]
   }
  ],
