--- a/Mia/train_random_forest.ipynb
+++ b/Mia/train_random_forest.ipynb
@@ -253,7 +253,10 @@
    "source": [
     "for ntrees in [50, 100, 200, 400]:\n",
     "    for max_depth in [10, 15, 20, 30]:\n",
-    "        train_random_forest(ntrees)"
+    "        train_random_forest(ntrees)\n",
+    "        \n",
+    "        \n",
+    "#max features "
    ]
   },
   {
