--- a/Mia/data_processing.ipynb
+++ b/Mia/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
     "    \n",
     "\t# Remove outliers.\n",
     "    outlier_list_scatter = [524, 1299]\n",
-    "    outlier_list_hard_to_fit = [463, 31, 534, 1433, 739, 1159, 108, 1231, 971, 1424]\n",
+    "    outlier_list_hard_to_fit = [463, 31, 534, 1433, 739, 1159, 108, 1231, 971, 1424 ]\n",
     "    outlier_list = outlier_list_scatter + outlier_list_hard_to_fit\n",
     "    df_processed = df_processed.drop(outlier_list)\n",
     "\n",
@@ -104,7 +104,7 @@
     "    df_processed.GrLivArea = np.log(df_processed.GrLivArea)\n",
     "    df_processed.TotalBsmtSF = np.log(df_processed.TotalBsmtSF+1)\n",
     "#     df_processed.LotArea = np.log(df_processed.LotArea) -- performance decreases\n",
-    "#     df_processed.GarageArea = np.log(df_processed.GarageArea)\n",
+    "#     df_processed.GarageArea = np.log(df_processed.GarageArea) -- will drop column \n",
     "\n",
     "\n",
     "\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -252,33 +252,6 @@
    ],
    "source": [
     "train_linear( )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_raw = pd.read_csv('train.csv',index_col=0)\n",
-    "\n",
-    "df_regression = data_process(df_raw)\n",
-    "\n",
-    "x_m = df_regression.drop([\"SalePrice\"], axis=1)\n",
-    "y_m = df_regression.loc[:,'SalePrice']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(x_m, y_m, test_size=0.2, random_state=42)\n",
-    "\n",
-    "ols = LinearRegression()\n",
-    "ols.fit(X_train, y_train)\n",
-    "print(\"R^2 for train set: %f\" %ols.score(X_train, y_train))\n",
-    "\n",
-    "print('-'*50)\n",
-    "\n",
-    "print(\"R^2 for test  set: %f\" %ols.score(X_test, y_test))\n",
-    "\n",
-    "print('-'*50)\n",
-    "rms = sqrt(mean_squared_error(y_test, ols.predict(X_test)))\n",
-    "print(\"RMSE for test  set: %f\" %rms)"
    ]
   },
   {
