add v1 stacking / add train/test switch for data processing function

--- a/Mia/data_processing.ipynb
+++ b/Mia/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,23 +25,33 @@
     "\n",
     "\n",
     "\n",
-    "def data_process(df_raw,remove_outlier = False,remove_hard_to_fit = False,linear_model = False):\n",
+    "def data_process(test = False ):\n",
+    "    \n",
+    "    \n",
+    "\t# Read file for train or test.\n",
+    "    if test:\n",
+    "        df_raw = pd.read_csv('test.csv',index_col=0)\n",
+    "    else:\n",
+    "        df_raw = pd.read_csv('train.csv',index_col=0)\n",
+    "        \n",
     "\n",
     "\t# Make a copy so the original dataframe will not be altered.\n",
     "    df_processed = df_raw.copy()\n",
     "    \n",
     "    \n",
     "\t# Remove outliers.\n",
-    "    outlier_list_scatter = [524, 1299]\n",
-    "    outlier_list_hard_to_fit = [463, 31, 534, 1433, 739, 1159, 108, 1231, 971, 1424 ]\n",
-    "    outlier_list = outlier_list_scatter + outlier_list_hard_to_fit\n",
-    "    df_processed = df_processed.drop(outlier_list)\n",
+    "    if test is False:\n",
+    "        outlier_list_scatter = [524, 1299]\n",
+    "        outlier_list_hard_to_fit = [463, 31, 534, 1433, 739, 1159, 108, 1231, 971, 1424 ]\n",
+    "        outlier_list = outlier_list_scatter + outlier_list_hard_to_fit\n",
+    "        df_processed = df_processed.drop(outlier_list)\n",
     "\n",
     "\n",
     "    ## Missing values\n",
     "    \n",
     "    # 259 LotFrontage  - replace missing value with 0 \n",
-    "    df_processed.LotFrontage = df_processed.LotFrontage.fillna(0)\n",
+    "#     df_processed.LotFrontage = df_processed.LotFrontage.fillna(0)\n",
+    "    df_processed[\"LotFrontage\"] = df_processed.groupby(\"Neighborhood\")[\"LotFrontage\"].transform(lambda x: x.fillna(x.median()))\n",
     "\n",
     "    # 1369 Alley - replace with None\n",
     "    df_processed.Alley = df_processed.Alley.fillna('None')\n",
@@ -96,11 +106,15 @@
     "\n",
     "    # drop GarageArea - higher correlation than GarageACars, results are better as well\n",
     "    df_processed = df_processed.drop(['GarageArea'], axis=1) \n",
-    "    \n",
+    "    df_processed = df_processed.drop(['MiscFeature'], axis=1) \n",
+    "#     df_processed = df_processed.drop(['1stFlrSF'], axis=1) \n",
+    "    df_processed = df_processed.drop(['TotRmsAbvGrd'], axis=1) \n",
+    "\n",
     "    \n",
     "\t# Feature Transformation - take the logarithm of the features.\n",
     "    #Linear_Num_Cols = ['TotalBsmtSF', '1stFlrSF', '2ndFlrSF', 'GrLivArea', 'LotArea', 'GarageArea', 'TotRmsAbvGrd', 'TotalSF', 'BsmtFinSF1']\n",
-    "    df_processed.SalePrice = np.log(df_processed.SalePrice)\n",
+    "    if test is False:\n",
+    "        df_processed.SalePrice = np.log(df_processed.SalePrice)\n",
     "    df_processed.GrLivArea = np.log(df_processed.GrLivArea)\n",
     "    df_processed.TotalBsmtSF = np.log(df_processed.TotalBsmtSF+1)\n",
     "#     df_processed.LotArea = np.log(df_processed.LotArea) -- performance decreases\n",
@@ -153,181 +167,6 @@
     "    df_processed = pd.get_dummies(df_processed, columns=df_processed.select_dtypes(include=['object']).columns, drop_first=True)\n",
     "\n",
     "    return df_processed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# MLflow Training\n",
-    "def train_linear( ):\n",
-    "    import os\n",
-    "    import warnings\n",
-    "    import sys\n",
-    "\n",
-    "    import pandas as pd\n",
-    "    import numpy as np\n",
-    "    from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
-    "    from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "    import mlflow\n",
-    "    import mlflow.sklearn\n",
-    "    \n",
-    "    import logging\n",
-    "    logging.basicConfig(level=logging.WARN)\n",
-    "    logger = logging.getLogger(__name__)\n",
-    "    \n",
-    "    #from data_processing import data_process\n",
-    "\n",
-    "    def eval_metrics(actual, pred):\n",
-    "        rmse = np.sqrt(mean_squared_error(actual, pred))\n",
-    "        r2 = r2_score(actual, pred)\n",
-    "        return rmse, r2\n",
-    "\n",
-    "\n",
-    "    warnings.filterwarnings(\"ignore\")\n",
-    "    np.random.seed(40)\n",
-    "\n",
-    "    # Read the file\n",
-    "    try:\n",
-    "        df_raw = pd.read_csv('train.csv',index_col=0)\n",
-    "    except Exception as e:\n",
-    "        logger.exception(\n",
-    "            \"Unable to download training & test CSV, check your internet connection. Error: %s\", e)\n",
-    "        \n",
-    "    # Data processing.\n",
-    "    df_processed = data_process(df_raw)\n",
-    "    \n",
-    "    # The predicted column is \"SalePrice\" , split the data into training and test sets. (0.75, 0.25) split.\n",
-    "    x_m = df_processed.drop([\"SalePrice\"], axis=1)\n",
-    "    y_m = df_processed.loc[:,'SalePrice']\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(x_m, y_m, test_size=0.2, random_state=42)\n",
-    "      \n",
-    "    \n",
-    "    # Execute linear regression\n",
-    "    with mlflow.start_run():\n",
-    "        ols = LinearRegression()\n",
-    "        ols.fit(X_train, y_train)\n",
-    "\n",
-    "        # Evaluate Metrics\n",
-    "        rmse = sqrt(mean_squared_error(y_test, ols.predict(X_test)))\n",
-    "\n",
-    "        # Print out metrics\n",
-    "        print(\"R^2 for train set: %f\" %ols.score(X_train, y_train))\n",
-    "        print('-'*50)\n",
-    "        print(\"R^2 for test  set: %f\" %ols.score(X_test, y_test))\n",
-    "        print('-'*50)\n",
-    "        print(\"RMSE for test  set: %f\" %rmse)\n",
-    "\n",
-    "        # Log parameter, metrics, and model to MLflow\n",
-    "        mlflow.log_param(\"model\", 'linear_regression')\n",
-    "        mlflow.log_metric(\"r2_train\", ols.score(X_train, y_train))\n",
-    "        mlflow.log_metric(\"r2_test\", ols.score(X_test, y_test))\n",
-    "        mlflow.log_metric(\"rmse\", rmse)\n",
-    "\n",
-    "\n",
-    "\n",
-    "        mlflow.sklearn.log_model(ols, \"model\")\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R^2 for train set: 0.951535\n",
-      "--------------------------------------------------\n",
-      "R^2 for test  set: 0.924113\n",
-      "--------------------------------------------------\n",
-      "RMSE for test  set: 0.108813\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_linear( )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " **Error Normality**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "error = ols.predict(X_test) - y_test\n",
-    "print('The mean of the errors is %.4f' %np.mean(error))\n",
-    "print('The standard deviation of the errors is %.4f' % np.std(error))\n",
-    "print(\"Skewness: %f\" % error.skew())\n",
-    "print(\"Kurtosis: %f\" % error.kurt())\n",
-    "sns.distplot(error, fit=norm);\n",
-    "fig = plt.figure()\n",
-    "res = stats.probplot(error, plot=plt)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "High Kurtosis means there are outliers for the model which are hard to fit in the model "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Drop the outliers \n",
-    "error.sort_values(ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Constant Variance and Independent Errors**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from scipy import stats\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "sub_error = error.sample(frac=0.5)\n",
-    "\n",
-    "plt.figure(figsize=(9, 6))\n",
-    "plt.xlim(-0.4, 0.4)\n",
-    "plt.ylim(0, 4.3)\n",
-    "\n",
-    "my_norm = stats.norm(np.mean(error), np.std(error)).pdf\n",
-    "label = 'All samples,\\nmean: %.4f, std: %.4f' % (np.mean(error), np.std(error))\n",
-    "plt.plot(np.linspace(-0.4, 0.4), my_norm(np.linspace(-0.4, 0.4)), label=label)\n",
-    "\n",
-    "my_norm = stats.norm(np.mean(sub_error), np.std(sub_error)).pdf\n",
-    "label = 'Half samples,\\nmean: %.4f, std: %.4f' % (np.mean(sub_error), np.std(sub_error))\n",
-    "plt.plot(np.linspace(-0.4, 0.4), my_norm(np.linspace(-0.4, 0.4)), color='green', label=label)\n",
-    "\n",
-    "plt.legend()\n",
-    "plt.show()"
    ]
   }
  ],
