add mlflow to rf

--- a/Mia/stacking.ipynb
+++ b/Mia/stacking.ipynb
@@ -34,25 +34,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "START ML 2019-11-16 20:10:59.679825\n",
+      "START ML 2019-11-16 23:11:32.349105\n",
       "TEST score on CV\n",
       "Kernel Ridge score: 0.1063 (0.0107)\n",
-      " 2019-11-16 20:11:21.954637\n",
+      " 2019-11-16 23:11:52.618708\n",
       "Lasso score: 0.1057 (0.0107)\n",
-      " 2019-11-16 20:11:37.631675\n",
+      " 2019-11-16 23:12:06.900590\n",
       "ElasticNet score: 0.1058 (0.0106)\n",
-      " 2019-11-16 20:12:28.941955\n",
-      "SVR score: 0.1801 (0.0264)\n",
-      " 2019-11-16 20:12:37.614666\n",
+      " 2019-11-16 23:13:00.723969\n",
       "GradientBoosting score: 0.1087 (0.0104)\n",
-      " 2019-11-16 20:14:09.568216\n"
+      " 2019-11-16 23:14:40.052808\n"
      ]
     }
    ],
@@ -151,8 +149,8 @@
     "score = cv_rmse(elasticnet)\n",
     "print(\"ElasticNet score: {:.4f} ({:.4f})\\n\".format(score.mean(), score.std()), datetime.now(), )\n",
     "\n",
-    "score = cv_rmse(svr)\n",
-    "print(\"SVR score: {:.4f} ({:.4f})\\n\".format(score.mean(), score.std()), datetime.now(), )\n",
+    "# score = cv_rmse(svr)\n",
+    "# print(\"SVR score: {:.4f} ({:.4f})\\n\".format(score.mean(), score.std()), datetime.now(), )\n",
     "\n",
     "# score = cv_rmse(lightgbm)\n",
     "# print(\"Lightgbm score: {:.4f} ({:.4f})\\n\".format(score.mean(), score.std()), datetime.now(), )\n",
@@ -211,8 +209,8 @@
     "lasso_model_full_data = lasso.fit(X, y)\n",
     "print(datetime.now(), 'ridge')\n",
     "ridge_model_full_data = ridge.fit(X, y)\n",
-    "print(datetime.now(), 'svr')\n",
-    "svr_model_full_data = svr.fit(X, y)\n",
+    "# print(datetime.now(), 'svr')\n",
+    "# svr_model_full_data = svr.fit(X, y)\n",
     "print(datetime.now(), 'GradientBoosting')\n",
     "gbr_model_full_data = gbr.fit(X, y)\n",
     "# print(datetime.now(), 'xgboost')\n",
@@ -224,8 +222,8 @@
     "def blend_models_predict(X):\n",
     "    return ((0.2 * elastic_model_full_data.predict(X)) + \\\n",
     "            (0.25 * lasso_model_full_data.predict(X)) + \\\n",
-    "            (0.1 * ridge_model_full_data.predict(X)) + \\\n",
-    "            (0.1 * svr_model_full_data.predict(X)) + \\\n",
+    "            (0.2 * ridge_model_full_data.predict(X)) + \\\n",
+    "#             (0.1 * svr_model_full_data.predict(X)) + \\\n",
     "            (0.1 * gbr_model_full_data.predict(X)) + \\\n",
     "#             (0.15 * xgb_model_full_data.predict(X)) + \\\n",
     "#             (0.1 * lgb_model_full_data.predict(X)) + \\\n",
