make gradient boost a function. prep for ml flow

--- a/Huimin/Data Exploration.ipynb
+++ b/Huimin/Data Exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "Name: SalePrice, dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -745,7 +745,7 @@
        "[5 rows x 282 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1047,7 @@
        " 'SaleCondition_Partial']"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
        "Text(0.5, 1.0, '$R^2$ of a all features against the other features')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
        "33"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1200,7 @@
        "47"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1828,9 +1828,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([dtype('int64'), dtype('O'), dtype('float64')], dtype=object)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "raw_data.dtypes.unique()"
    ]
@@ -1844,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -1900,6 +1911,10 @@
       "C:\\Users\\Laptop2\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
       "  \n",
       "C:\\Users\\Laptop2\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  \n",
+      "C:\\Users\\Laptop2\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  \n",
+      "C:\\Users\\Laptop2\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
       "  \n"
      ]
     },
@@ -1907,10 +1922,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Laptop2\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
-      "  \n",
-      "C:\\Users\\Laptop2\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
-      "  \n",
       "C:\\Users\\Laptop2\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
       "  \n"
      ]
@@ -2500,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2526,7 +2537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2559,16 +2570,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x23a1019ea90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2511daa8048>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2591,16 +2602,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x23a0ee85fd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x251240dff98>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
