--- a/Huimin/Gradient_Boost.ipynb
+++ b/Huimin/Gradient_Boost.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression \n",
     "from math import sqrt\n",
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "[5 rows x 78 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,43 +596,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Laptop2\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py:266: UserWarning: The total space of parameters 32 is smaller than n_iter=100. Running 32 iterations. For exhaustive searches, use GridSearchCV.\n",
-      "  % (grid_size, self.n_iter, grid_size), UserWarning)\n",
-      "C:\\Users\\Laptop2\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\gradient_boosting.py:1450: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "random_search test model r2: 0.8823808197276397\n",
-      "random search train model r2: 0.9641467611932517\n",
-      "  train_test_split_RMSE: 0.13493729082918707\n",
-      "  Train_test_split_MAE: 0.08566773960443838\n",
-      "  Train_test_split_R2: 0.8823808197276397\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
+    "#need MLFlOW\n",
     "#random search with gradient boosting regressor\n",
     "    \n",
     "\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "num_estimators = [500,1000]\n",
-    "learn_rates = [0.02, 0.05]\n",
-    "max_depths = [1, 2]\n",
-    "min_samples_leaf = [5,10]\n",
-    "min_samples_split = [5,10]\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
     "\n",
     "\n",
     "# Split the data into training and test sets. (0.75, 0.25) split.\n",
@@ -644,89 +618,211 @@
     "train_y = train[[\"SalePrice\"]]\n",
     "test_y = test[[\"SalePrice\"]]\n",
     "\n",
-    "param_grid = {'n_estimators': num_estimators,\n",
-    "              'learning_rate': learn_rates,\n",
-    "              'max_depth': max_depths,\n",
-    "              'min_samples_leaf': min_samples_leaf,\n",
-    "              'min_samples_split': min_samples_split}\n",
+    "def rand_search_gradient_boost(n_estimators,learn_rates,max_depths,min_samples_leaf, min_samples_split):\n",
     "\n",
-    "#random serch cross validation for gradient boosting\n",
-    "random_search =RandomizedSearchCV(GradientBoostingRegressor(loss='huber'), \n",
-    "                                  param_grid, random_state=1, n_iter=100, \n",
-    "                                  cv=5, verbose=0, n_jobs=-1)\n",
+    "    param_grid = {'n_estimators': n_estimators,\n",
+    "                  'learning_rate': learn_rates,\n",
+    "                  'max_depth': max_depths,\n",
+    "                  'min_samples_leaf': min_samples_leaf,\n",
+    "                  'min_samples_split': min_samples_split}\n",
     "\n",
-    "random_search.fit(train_x, train_y)\n",
-    "random_search.best_params_\n",
-    "y_pred = random_search.predict(test_x)\n",
+    "    #random serch cross validation for gradient boosting\n",
+    "    random_search =RandomizedSearchCV(GradientBoostingRegressor(), \n",
+    "                                      param_grid, random_state=1, \n",
+    "                                      verbose=0, n_jobs=-1, cv=5)\n",
     "\n",
-    "#Mean cross-validated score of the best_estimator\n",
-    "print ('random_search test model r2:',random_search.score(test_x,test_y))\n",
-    "print ('random search train model r2:', random_search.score(train_x, train_y))\n",
+    "    random_search.fit(train_x, train_y.values.ravel())\n",
+    "    \n",
+    "    print('best params:',random_search.best_params_)\n",
+    "    \n",
+    "    best_n_estimators=random_search.best_params_.get(\"n_estimators\")\n",
+    "    best_learn_rates=random_search.best_params_.get(\"learning_rate\")\n",
+    "    best_max_depth=random_search.best_params_.get(\"max_depth\")\n",
+    "    best_min_samples_leaf=random_search.best_params_.get(\"min_samples_leaf\")\n",
+    "    best_min_samples_split=random_search.best_params_.get(\"min_samples_split\")\n",
+    "    \n",
+    "    y_pred = random_search.predict(test_x)\n",
     "\n",
-    "\n",
-    "def eval_metrics(actual, pred):\n",
-    "    rmse = np.sqrt(mean_squared_error(actual, pred))\n",
-    "    mae = mean_absolute_error(actual, pred)\n",
-    "    r2 = r2_score(actual, pred)\n",
-    "    return rmse, mae, r2\n",
-    "\n",
-    "#eval_metrics(actual, predicted)\n",
-    "(rmse, mae, r2) = eval_metrics(test_y, y_pred)\n",
-    "\n",
-    "# Print out metrics\n",
-    "print(\"  train_test_split_RMSE: %s\" % rmse)\n",
-    "print(\"  Train_test_split_MAE: %s\" % mae)\n",
-    "print(\"  Train_test_split_R2: %s\" % r2)\n",
+    "    #Mean cross-validated score of the best_estimator\n",
+    "    print ('cross-validated random_search test model r2:',random_search.score(test_x,test_y))\n",
+    "    print ('cross-validated random search train model r2:', random_search.score(train_x, train_y))\n",
     "\n",
     "\n",
+    "    def eval_metrics(actual, pred):\n",
+    "        rmse = np.sqrt(mean_squared_error(actual, pred))\n",
+    "        mae = mean_absolute_error(actual, pred)\n",
+    "        r2 = r2_score(actual, pred)\n",
+    "        return rmse, mae, r2\n",
+    "\n",
+    "    #eval_metrics(actual, predicted)\n",
+    "    (rmse, mae, r2) = eval_metrics(test_y, y_pred)\n",
+    "\n",
+    "    # Print out metrics\n",
+    "    print(\"  train_test_split_RMSE: %s\" % rmse)\n",
+    "    print(\"  Train_test_split_MAE: %s\" % mae)\n",
+    "    print(\"  Train_test_split_R2: %s\" % r2)\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    return (best_n_estimators,best_learn_rates,best_max_depth,best_min_samples_leaf, best_min_samples_split,rmse, mae,r2 )\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best params: {'n_estimators': 100, 'min_samples_split': 5, 'min_samples_leaf': 5, 'max_depth': 2, 'learning_rate': 0.2}\n",
+      "cross-validated random_search test model r2: 0.8870340569519597\n",
+      "cross-validated random search train model r2: 0.9510512545345133\n",
+      "  train_test_split_RMSE: 0.13693912314758117\n",
+      "  Train_test_split_MAE: 0.09453833899787792\n",
+      "  Train_test_split_R2: 0.8870340569519597\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(100,\n",
+       " 0.2,\n",
+       " 2,\n",
+       " 5,\n",
+       " 5,\n",
+       " 0.13693912314758117,\n",
+       " 0.09453833899787792,\n",
+       " 0.8870340569519597)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#grfrom sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "\n",
-    "num_estimators = [1000]\n",
-    "learn_rates = [0.02, 0.05]\n",
-    "max_depths = [1,2]\n",
+    "num_estimators = [100]\n",
+    "learn_rates = [0.2, 0.5]\n",
+    "max_depths = [1, 2]\n",
     "min_samples_leaf = [5,10]\n",
     "min_samples_split = [5,10]\n",
     "\n",
-    "param_grid = {'n_estimators': num_estimators,\n",
-    "              'learning_rate': learn_rates,\n",
-    "              'max_depth': max_depths,\n",
-    "              'min_samples_leaf': min_samples_leaf,\n",
-    "              'min_samples_split': min_samples_split}\n",
+    "rand_search_gradient_boost(num_estimators,learn_rates,max_depths,min_samples_leaf, min_samples_split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#grid search for gradien boost\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "grid_search = GridSearchCV(GradientBoostingRegressor(loss='huber'),\n",
-    "                           param_grid, cv=3, return_train_score=True)\n",
     "\n",
-    "grid_search.fit(train_x, train_y.values.ravel())\n",
+    "def grid_search_gradient_boost(n_estimators,learn_rates,max_depths,min_samples_leaf, min_samples_split):\n",
+    "    param_grid = {'n_estimators': n_estimators,\n",
+    "                  'learning_rate': learn_rates,\n",
+    "                  'max_depth': max_depths,\n",
+    "                  'min_samples_leaf': min_samples_leaf,\n",
+    "                  'min_samples_split': min_samples_split}\n",
+    "\n",
+    "    grid_search = GridSearchCV(GradientBoostingRegressor(loss='huber'),\n",
+    "                               param_grid, cv=3, return_train_score=True)\n",
+    "\n",
+    "    grid_search.fit(train_x, train_y.values.ravel())\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "     \n",
+    "    print('best params:',grid_search.best_params_)\n",
+    "    \n",
+    "    best_n_estimators=grid_search.best_params_.get(\"n_estimators\")\n",
+    "    best_learn_rates=grid_search.best_params_.get(\"learning_rate\")\n",
+    "    best_max_depth=grid_search.best_params_.get(\"max_depth\")\n",
+    "    best_min_samples_leaf=grid_search.best_params_.get(\"min_samples_leaf\")\n",
+    "    best_min_samples_split=grid_search.best_params_.get(\"min_samples_split\")\n",
+    "    \n",
+    "    y_pred = grid_search.predict(test_x)\n",
+    "\n",
+    "    #Mean cross-validated score of the best_estimator\n",
+    "    print ('cross-validated random_search test model r2:',grid_search.score(test_x,test_y))\n",
+    "    print ('cross-validated random search train model r2:', grid_search.score(train_x, train_y))\n",
     "\n",
     "\n",
+    "    def eval_metrics(actual, pred):\n",
+    "        rmse = np.sqrt(mean_squared_error(actual, pred))\n",
+    "        mae = mean_absolute_error(actual, pred)\n",
+    "        r2 = r2_score(actual, pred)\n",
+    "        return rmse, mae, r2\n",
+    "\n",
+    "    #eval_metrics(actual, predicted)\n",
+    "    (rmse, mae, r2) = eval_metrics(test_y, y_pred)\n",
+    "\n",
+    "    # Print out metrics\n",
+    "    print(\"  train_test_split_RMSE: %s\" % rmse)\n",
+    "    print(\"  Train_test_split_MAE: %s\" % mae)\n",
+    "    print(\"  Train_test_split_R2: %s\" % r2)\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    return (num_estimators,learn_rates,max_depths,min_samples_leaf, min_samples_split,rmse, mae,r2 )\n",
     "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best params: {'learning_rate': 0.05, 'max_depth': 2, 'min_samples_leaf': 10, 'min_samples_split': 5, 'n_estimators': 100}\n",
+      "cross-validated random_search test model r2: 0.8471681904601833\n",
+      "cross-validated random search train model r2: 0.8811387100621595\n",
+      "  train_test_split_RMSE: 0.1592797825679748\n",
+      "  Train_test_split_MAE: 0.10909248256605611\n",
+      "  Train_test_split_R2: 0.8471681904601833\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([100],\n",
+       " [0.02, 0.05],\n",
+       " [1, 2],\n",
+       " [5, 10],\n",
+       " [5, 10],\n",
+       " 0.1592797825679748,\n",
+       " 0.10909248256605611,\n",
+       " 0.8471681904601833)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "num_estimators_g = [100]\n",
+    "learn_rates_g = [0.02, 0.05]\n",
+    "max_depths_g = [1,2]\n",
+    "min_samples_leaf_g = [5,10]\n",
+    "min_samples_split_g = [5,10]\n",
+    "\n",
+    "grid_search_gradient_boost(num_estimators_g,learn_rates_g,max_depths_g,min_samples_leaf_g, min_samples_split_g)"
+   ]
   },
   {
    "cell_type": "code",
