--- a/Mia/Data Exploration.ipynb
+++ b/Mia/Data Exploration.ipynb
@@ -27,7 +27,11 @@
     "- **Multivariate study**. We'll try to understand how the dependent variable and independent variables relate.\n",
     "- **Basic cleaning**. We'll clean the dataset and handle the missing data, outliers and both numeric and categorical variables.\n",
     "- **Test assumptions**. We'll check if our data meets the assumptions required by most multivariate techniques.\n",
-    "- **Functionize**. The findings in this data exploration will be summarized in a data processing function for modeling use.\n"
+    "- **Function**. The findings in this data exploration will be summarized in a data processing function for modeling use.\n",
+    "</a><br>\n",
+    "### Links:\n",
+    "- **Comprehensive data exploration with Python** https://www.kaggle.com/pmarcelino/comprehensive-data-exploration-with-python\n",
+    "\n"
    ]
   },
   {
@@ -94,15 +98,6 @@
    "source": [
     "# df_raw.columnss\n",
     "# df_raw.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# correlation "
    ]
   },
   {
@@ -272,79 +267,9 @@
     "df_clean = df_clean.drop(['GarageArea'], axis=1) \n",
     "\n",
     "# drop MiscFeature \n",
-    "df_clean = df_clean.drop(['MiscFeature'], axis=1) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #histogram and normal probability plot\n",
-    "# sns.distplot(df_raw['SalePrice'], fit=norm);\n",
-    "# fig = plt.figure()\n",
-    "# res = stats.probplot(df_raw['SalePrice'], plot=plt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #histogram and normal probability plot\n",
-    "# sns.distplot(df_clean['SalePrice'], fit=norm);\n",
-    "# fig = plt.figure()\n",
-    "# res = stats.probplot(df_clean['SalePrice'], plot=plt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #histogram and normal probability plot\n",
-    "# sns.distplot(df_raw['GrLivArea'], fit=norm);\n",
-    "# fig = plt.figure()\n",
-    "# res = stats.probplot(df_raw['GrLivArea'], plot=plt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #histogram and normal probability plot\n",
-    "# sns.distplot(df_clean['GrLivArea'], fit=norm);\n",
-    "# fig = plt.figure()\n",
-    "# res = stats.probplot(df_clean['GrLivArea'], plot=plt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #histogram and normal probability plot\n",
-    "# sns.distplot(df_raw['TotalBsmtSF'], fit=norm);\n",
-    "# fig = plt.figure()\n",
-    "# res = stats.probplot(df_raw['TotalBsmtSF'], plot=plt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #histogram and normal probability plot\n",
-    "# sns.distplot(df_clean['TotalBsmtSF'], fit=norm);\n",
-    "# fig = plt.figure()\n",
-    "# res = stats.probplot(df_clean['TotalBsmtSF'], plot=plt)"
+    "df_clean = df_clean.drop(['MiscFeature'], axis=1) \n",
+    "\n",
+    "# "
    ]
   },
   {
@@ -1895,7 +1820,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
